--- a/src/styles/_pages/index.sass
+++ b/src/styles/_pages/index.sass
@@ -4,19 +4,19 @@
 .news
 	padding-bottom: 2rem
 	.title
-		padding: 1rem 0
+		padding: 1rem 0 .3rem
 		h1
 			display: flex
 			justify-content: center
 			align-items: center
-			font-weight: 900
+			font-weight: 600
 			font-size: 1.5rem
 			&:before
 				content: ''
 				background: #00c4c9
 				width: 5rem
 				position: absolute
-				height: 2px
+				height: 3px
 				bottom: 0
 				transform: translateY(50%)
 			&:after
@@ -89,7 +89,7 @@
 	+media-breakpoint-up(md)
 		padding: 5rem 0
 	.title
-		padding: 1rem 0
+		padding: 1rem 0 .3rem
 		h1
 			display: flex
 			justify-content: center
@@ -99,7 +99,7 @@
 			&:before
 				content: ''
 				background: #00c4c9
-				width: 4rem
+				width: 5rem
 				position: absolute
 				height: 3px
 				bottom: 0
@@ -184,7 +184,7 @@
 .develope2
 	padding: 1rem 0
 	.title
-		padding: 1rem 0
+		padding: 1rem 0 .3rem
 		h1
 			display: flex
 			justify-content: center
@@ -194,7 +194,7 @@
 			&:before
 				content: ''
 				background: #00c4c9
-				width: 4rem
+				width: 5rem
 				position: absolute
 				height: 3px
 				bottom: 0
@@ -282,7 +282,7 @@
 		+media-breakpoint-up(md)
 			margin: 0 !important
 	.title
-		padding: 1rem 0
+		padding: 1rem 0 .3rem
 		h1
 			display: flex
 			justify-content: center
@@ -292,7 +292,7 @@
 			&:before
 				content: ''
 				background: #00c4c9
-				width: 4rem
+				width: 5rem
 				position: absolute
 				height: 3px
 				bottom: 0
