--- a/src/styles/_pages/index.sass
+++ b/src/styles/_pages/index.sass
@@ -84,7 +84,7 @@
 							color: #000
 .develope
 	padding: 3rem 0
-	background: url('./img/banner1.png') no-repeat center center fixed
+	background: url('/img/banner1.png') no-repeat center center fixed
 	background-size: cover
 	+media-breakpoint-up(md)
 		padding: 5rem 0
@@ -136,7 +136,7 @@
 					i, h5
 						color: #00c4c9
 .more
-	background: url('./img/banner2.png') no-repeat center center fixed
+	background: url('/img/banner2.png') no-repeat center center fixed
 	background-size: cover
 	padding: 2rem 0
 	position: relative
@@ -259,7 +259,7 @@
 							z-index: 2
 .customer
 	padding: 3rem 0
-	background: url('./img/banner3.png') center center no-repeat fixed
+	background: url('/img/banner3.png') center center no-repeat fixed
 	background-size: cover
 	.owl-nav
 		.owl-prev, .owl-next
